tests/errors/_questions/preprocessor/incorrect/after_ident_must_be_space/after_ident_must_be_space_1.c
#includedont_elif.c"

int main()
{
	return 0;
}
